RESOLVED FIXED285340
[Autosize] Percent height does not work well when viewport is the containing block
https://bugs.webkit.org/show_bug.cgi?id=285340
Summary [Autosize] Percent height does not work well when viewport is the containing ...
alan
Reported 2025-01-03 06:54:58 PST
Attachments
[fast-cq]Patch (4.34 KB, patch)
2025-01-03 07:15 PST, alan
no flags
alan
Comment 1 2025-01-03 07:15:49 PST
Created attachment 473766 [details] [fast-cq]Patch
EWS
Comment 2 2025-01-06 05:29:05 PST
Committed 288459@main (e68d9854afc2): <https://commits.webkit.org/288459@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473766 [details].
Note You need to log in before you can comment on or make changes to this bug.