[Autosize] Percent height does not work well when viewport is the containing block https://bugs.webkit.org/show_bug.cgi?id=285340 <rdar://138934644>

Reviewed by Antti Koivisto.

See the comment in computePercentageLogicalHeight.

* LayoutTests/fast/dynamic/autosize-content-with-percent-to-viewport-expected.txt: Added.
* LayoutTests/fast/dynamic/autosize-content-with-percent-to-viewport.html: Added.
* Source/WebCore/page/LocalFrameView.h:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computePercentageLogicalHeight const):

Canonical link: https://commits.webkit.org/288459@main